# cs4372-linear-regression-analysis

./: .gitignore  OLR.ipynb  README.md  SGD.ipynb  model_training_analysis.md  pyproject.toml  report.typ
code/: hello.py  pyproject.toml
docs/: instructions.md
src/: OLS.ipynb  SGD.ipynb  preprocessing.ipynb
